--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi magni nostrum voluptates perspiciatis enim magnam consequatur itaque recusandae eum similique at eaque sapiente cum dolore dicta, possimus illo atque eligendi.</p>
 </body>
 </html>
